[gd_scene load_steps=18 format=2]

[ext_resource path="res://GUI/fontes/pixelart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/New Piskel.png" type="Texture" id=2]
[ext_resource path="res://GUI/scripts/options.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=17]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="options" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.105882, 0.321569, 1 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 231, 136 )
scale = Vector2( 8, 8 )
frames = SubResource( 9 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 43, 109 )
scale = Vector2( 8, 8 )
frames = SubResource( 11 )
flip_h = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 285, 71 )
scale = Vector2( 8, 8 )
frames = SubResource( 13 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 61, 122 )
scale = Vector2( 8, 8 )
frames = SubResource( 14 )
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 275, 135 )
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite7" type="AnimatedSprite" parent="."]
position = Vector2( 11, 122 )
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite8" type="AnimatedSprite" parent="."]
position = Vector2( 33, 128 )
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite9" type="AnimatedSprite" parent="."]
position = Vector2( 119, 132 )
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite10" type="AnimatedSprite" parent="."]
position = Vector2( 138, 149 )
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite11" type="AnimatedSprite" parent="."]
position = Vector2( 56, 184 )
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite20" type="AnimatedSprite" parent="."]
position = Vector2( 248, 22 )
rotation = -3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 20 )

[node name="AnimatedSprite21" type="AnimatedSprite" parent="."]
position = Vector2( 81, 18 )
rotation = -3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 20 )

[node name="AnimatedSprite13" type="AnimatedSprite" parent="."]
position = Vector2( 20, -14 )
rotation = 3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite14" type="AnimatedSprite" parent="."]
position = Vector2( 51, -29 )
rotation = 3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite15" type="AnimatedSprite" parent="."]
position = Vector2( 122, -28 )
rotation = 3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite16" type="AnimatedSprite" parent="."]
position = Vector2( 217, -2 )
rotation = 3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite17" type="AnimatedSprite" parent="."]
position = Vector2( 250, -15 )
rotation = 3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite18" type="AnimatedSprite" parent="."]
position = Vector2( 280, -10 )
rotation = 3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite19" type="AnimatedSprite" parent="."]
position = Vector2( 305, -11 )
rotation = 3.14159
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
position = Vector2( 243, 125 )
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="AnimatedSprite12" type="AnimatedSprite" parent="."]
position = Vector2( 299, 155 )
scale = Vector2( 8, 8 )
frames = SubResource( 16 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -46.5
margin_right = 81.0
margin_bottom = 46.5

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 162.0
margin_bottom = 21.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 17 )
text = "OPTIONS"
align = 1
valign = 1

[node name="fullscreen" type="Button" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 162.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 18 )
text = "FULLSCREEN"
flat = true

[node name="cheats" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 162.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 18 )
text = "CHEATS"
flat = true

[node name="voltar" type="Button" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 162.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 18 )
text = "VOLTAR"
flat = true

[connection signal="pressed" from="VBoxContainer/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/cheats" to="." method="_on_cheats_pressed"]
[connection signal="pressed" from="VBoxContainer/voltar" to="." method="_on_voltar_pressed"]
